--- a/FlyerWPFPrototype/FlyerWPFPrototype/View/FlyerCreatorView.xaml
+++ b/FlyerWPFPrototype/FlyerWPFPrototype/View/FlyerCreatorView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="FlyerWPFPrototype.FlyerSampleView"
+﻿<Window x:Class="FlyerWPFPrototype.FlyerCreatorView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,7 +7,7 @@
              xmlns:cal="http://www.caliburnproject.org"
              mc:Ignorable="d" 
              d:DesignHeight="800" d:DesignWidth="800"
-             Title="Food Giant Flyer Super Ultra Early Prototype!">
+             Title="Food Giant Flyer Super Early Prototype!">
     <Window.Resources>
         <ResourceDictionary>
             <Style TargetType="Label" x:Key="LabelStyle">
@@ -15,7 +15,6 @@
             </Style>
             <Style TargetType="Border" x:Key="BorderStyle">
                 <Setter Property="BorderThickness" Value="1"/>
-                <Setter Property="BorderBrush" Value="Black"/>
             </Style>
             <Style TargetType="ComboBox" x:Key="CmboBoxStyle">
                 <Setter Property="Height" Value="30"/>
@@ -36,19 +35,20 @@
         </Grid.RowDefinitions>
 
         <!-- Style Check -->
-        <Label Grid.Row="0" Grid.Column="0" Content="Style Check" />
+        <Label Grid.Row="0" Grid.Column="0" Content="Flyer Template" />
         <ComboBox Grid.Row="1" Grid.Column="0" SelectionChanged="StyleBox_SelectionChanged">
-            <ComboBoxItem Content="Normal Style" IsSelected="True"/>
+            <ComboBoxItem Content="Basic Flyer" IsSelected="True"/>
             <ComboBoxItem Content="Pretty Style"/>
         </ComboBox>
+        
         <!--Populates below items based on number of items select-->
         <!--TODO: Design Doc - Need to clear all items over limit if this changes -->
         <!--Other option is limit populated items based on this size-->
         <Label Grid.Row="0" Grid.Column="1" Content="Number of images on page" HorizontalAlignment="Right" />
         <ComboBox Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2"
                   ItemsSource="{Binding NumImagesCmboBox}"
+                  
                   cal:Message.Attach="NumImagesCmboBox_SelectionChanged($source)" SelectedItem="{Binding NumImages}" />
-
 
         <!--Current way to generate flyer needs to "hook up" to aspx page and send all active items over-->
         <Label Grid.Column="1" Grid.Row="1"  Content="Generate Flyer" HorizontalAlignment="Right"/>
@@ -72,7 +72,8 @@
                 <RowDefinition Height="1*" SharedSizeGroup="Items"/>
                 <RowDefinition Height="1*" SharedSizeGroup="Items"/>
             </Grid.RowDefinitions>
-
+            
+            
             <Label Grid.Row="0" Grid.Column="0" Content="Item 1 Name and Price" Visibility="{Binding Item1Vis}"/>
             <ComboBox Grid.Row="0" Grid.Column="1" x:Name="item1CmboBox" Style="{StaticResource CmboBoxStyle}"
                       ItemsSource="{Binding ItemList}" Visibility="{Binding Item1Vis}" cal:Message.Attach="ItemListCmboBox_SelectionChanged($source)">
@@ -84,22 +85,24 @@
             </ComboBox>
             <TextBlock Grid.Row="0" Grid.Column="2" Text="{Binding Price1}" Visibility="{Binding Item1Vis}" FontSize="24" HorizontalAlignment="Center"/>
 
-            <Grid Grid.Row="0" Grid.Column="3">
+            <Grid Grid.Row="0" Grid.Column="3" Visibility="{Binding Item1Vis}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*" SharedSizeGroup="ItemGroup"/>
                     <ColumnDefinition Width="1*" SharedSizeGroup="ItemGroup"/>
                     <ColumnDefinition Width="1*" SharedSizeGroup="ItemGroup"/>
                 </Grid.ColumnDefinitions>
-                <Border Grid.Column="0" Style="{StaticResource BorderStyle}" >
-                    <Image Grid.Column="0" Source="{Binding Image1Src1}" Visibility="{Binding Item1Vis}"/>
+                <Border Grid.Column="0" Style="{StaticResource BorderStyle}" BorderBrush="{Binding Border1Src1}">
+                    <Image Grid.Column="0" Source="{Binding Image1Src1}" cal:Message.Attach="[Event MouseLeftButtonDown] = [Action Image1SrcChanged($source)]"/>
                 </Border>
-                <Border Grid.Column="1"  Style="{StaticResource BorderStyle}">
-                    <Image Grid.Column="1" Source="{Binding Image1Src2}" Visibility="{Binding Item1Vis}"/>
+                <Border Grid.Column="1"  Style="{StaticResource BorderStyle}" BorderBrush="{Binding Border1Src2}">
+                    <Image Grid.Column="1" Source="{Binding Image1Src2}"  cal:Message.Attach="[Event MouseLeftButtonDown] = [Action Image1SrcChanged($source)]"/>
                 </Border>
-                <Border Grid.Column="2" Style="{StaticResource BorderStyle}">
-                    <Image Grid.Column="2" Source="{Binding Image1Src3}" Visibility="{Binding Item1Vis}"/>
+                <Border Grid.Column="2" Style="{StaticResource BorderStyle}" BorderBrush="{Binding Border1Src3}">
+                    <Image Grid.Column="2" Source="{Binding Image1Src3}" cal:Message.Attach="[Event MouseLeftButtonDown] = [Action Image1SrcChanged($source)]"/>
                 </Border>
             </Grid>
+            
+            
             <Label Grid.Row="1" Grid.Column="0" Content="Item 2 Name and Price" Visibility="{Binding Item2Vis}"/>
             <ComboBox Grid.Row="1" Grid.Column="1" x:Name="item2CmboBox" ItemsSource="{Binding ItemList}" Style="{StaticResource CmboBoxStyle}"
                       Visibility="{Binding Item2Vis}" cal:Message.Attach="ItemListCmboBox_SelectionChanged($source)">
@@ -111,22 +114,23 @@
             </ComboBox>
             <TextBlock Grid.Row="1" Grid.Column="2" Text="{Binding Price2}" Visibility="{Binding Item2Vis}" FontSize="24" HorizontalAlignment="Center"/>
 
-            <Grid Grid.Row="1" Grid.Column="3">
+            <Grid Grid.Row="1" Grid.Column="3" Visibility="{Binding Item2Vis}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*" SharedSizeGroup="ItemGroup"/>
                     <ColumnDefinition Width="1*" SharedSizeGroup="ItemGroup"/>
                     <ColumnDefinition Width="1*" SharedSizeGroup="ItemGroup"/>
                 </Grid.ColumnDefinitions>
-                <Border Grid.Column="0" Style="{StaticResource BorderStyle}" >
-                    <Image Grid.Column="0" Source="{Binding Image2Src1}" Visibility="{Binding Item1Vis}"/>
+                <Border Grid.Column="0" Style="{StaticResource BorderStyle}" BorderBrush="{Binding Border2Src1}">
+                    <Image Grid.Column="0" Source="{Binding Image2Src1}" cal:Message.Attach="[Event MouseLeftButtonDown] = [Action Image2SrcChanged($source)]"/>
                 </Border>
-                <Border Grid.Column="1"  Style="{StaticResource BorderStyle}">
-                    <Image Grid.Column="1" Source="{Binding Image2Src2}" Visibility="{Binding Item1Vis}"/>
+                <Border Grid.Column="1"  Style="{StaticResource BorderStyle}" BorderBrush="{Binding Border2Src2}">
+                    <Image Grid.Column="1" Source="{Binding Image2Src2}" cal:Message.Attach="[Event MouseLeftButtonDown] = [Action Image2SrcChanged($source)]"/>
                 </Border>
-                <Border Grid.Column="2" Style="{StaticResource BorderStyle}">
-                    <Image Grid.Column="2" Source="{Binding Image2Src3}" Visibility="{Binding Item1Vis}"/>
+                <Border Grid.Column="2" Style="{StaticResource BorderStyle}" BorderBrush="{Binding Border2Src2}">
+                    <Image Grid.Column="2" Source="{Binding Image2Src3}" cal:Message.Attach="[Event MouseLeftButtonDown] = [Action Image2SrcChanged($source)]"/>
                 </Border>
             </Grid>
+            
 
             <Label Grid.Row="2" Grid.Column="0" Content="Item 3 Name and Price" Visibility="{Binding Item3Vis}"/>
             <ComboBox Grid.Row="2" Grid.Column="1" Style="{StaticResource CmboBoxStyle}" x:Name="item3CmboBox" ItemsSource="{Binding ItemList}" Visibility="{Binding Item3Vis}" 
@@ -139,23 +143,24 @@
             </ComboBox>
             <TextBlock Grid.Row="2" Grid.Column="2" Text="{Binding Price3}" Visibility="{Binding Item3Vis}" FontSize="24" HorizontalAlignment="Center"/>
 
-            <Grid Grid.Row="2" Grid.Column="3">
+            <Grid Grid.Row="2" Grid.Column="3" Visibility="{Binding Item3Vis}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*" SharedSizeGroup="ItemGroup"/>
                     <ColumnDefinition Width="1*" SharedSizeGroup="ItemGroup"/>
                     <ColumnDefinition Width="1*" SharedSizeGroup="ItemGroup"/>
                 </Grid.ColumnDefinitions>
-                <Border Grid.Column="0" Style="{StaticResource BorderStyle}" >
-                    <Image Grid.Column="0" Source="{Binding Image3Src1}" Visibility="{Binding Item1Vis}"/>
+                <Border Grid.Column="0" Style="{StaticResource BorderStyle}" BorderBrush="{Binding Border3Src1}">
+                    <Image Grid.Column="0" Source="{Binding Image3Src1}" cal:Message.Attach="[Event MouseLeftButtonDown] = [Action Image3SrcChanged($source)]"/>
                 </Border>
-                <Border Grid.Column="1"  Style="{StaticResource BorderStyle}">
-                    <Image Grid.Column="1" Source="{Binding Image3Src2}" Visibility="{Binding Item1Vis}"/>
+                <Border Grid.Column="1"  Style="{StaticResource BorderStyle}" BorderBrush="{Binding Border3Src1}">
+                    <Image Grid.Column="1" Source="{Binding Image3Src2}" cal:Message.Attach="[Event MouseLeftButtonDown] = [Action Image3SrcChanged($source)]"/>
                 </Border>
-                <Border Grid.Column="2" Style="{StaticResource BorderStyle}">
-                    <Image Grid.Column="2" Source="{Binding Image3Src3}" Visibility="{Binding Item1Vis}"/>
+                <Border Grid.Column="2" Style="{StaticResource BorderStyle}" BorderBrush="{Binding Border3Src1}">
+                    <Image Grid.Column="2" Source="{Binding Image3Src3}" cal:Message.Attach="[Event MouseLeftButtonDown] = [Action Image3SrcChanged($source)]"/>
                 </Border>
             </Grid>
 
+            
             <Label Grid.Row="3" Grid.Column="0" Content="Item 4 Name and Price" Visibility="{Binding Item4Vis}"/>
             <ComboBox Grid.Row="3" Grid.Column="1" Style="{StaticResource CmboBoxStyle}" x:Name="item4CmboBox" ItemsSource="{Binding ItemList}" Visibility="{Binding Item4Vis}" 
                       cal:Message.Attach="ItemListCmboBox_SelectionChanged($source)" >
@@ -167,23 +172,24 @@
             </ComboBox>
             <TextBlock Grid.Row="3" Grid.Column="2" Text="{Binding Price4}" Visibility="{Binding Item4Vis}" FontSize="24" HorizontalAlignment="Center"/>
 
-            <Grid Grid.Row="3" Grid.Column="3">
+            <Grid Grid.Row="3" Grid.Column="3" Visibility="{Binding Item4Vis}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*" SharedSizeGroup="ItemGroup"/>
                     <ColumnDefinition Width="1*" SharedSizeGroup="ItemGroup"/>
                     <ColumnDefinition Width="1*" SharedSizeGroup="ItemGroup"/>
                 </Grid.ColumnDefinitions>
-                <Border Grid.Column="0" Style="{StaticResource BorderStyle}" >
-                    <Image Grid.Column="0" Source="{Binding Image4Src1}" Visibility="{Binding Item1Vis}"/>
+                <Border Grid.Column="0" Style="{StaticResource BorderStyle}" BorderBrush="{Binding Border4Src1}">
+                    <Image Grid.Column="0" Source="{Binding Image4Src1}" cal:Message.Attach="[Event MouseLeftButtonDown] = [Action Image4SrcChanged($source)]"/>
                 </Border>
-                <Border Grid.Column="1"  Style="{StaticResource BorderStyle}">
-                    <Image Grid.Column="1" Source="{Binding Image4Src2}" Visibility="{Binding Item1Vis}"/>
+                <Border Grid.Column="1"  Style="{StaticResource BorderStyle}" BorderBrush="{Binding Border4Src2}">
+                    <Image Grid.Column="1" Source="{Binding Image4Src2}" cal:Message.Attach="[Event MouseLeftButtonDown] = [Action Image4SrcChanged($source)]"/>
                 </Border>
-                <Border Grid.Column="2" Style="{StaticResource BorderStyle}">
-                    <Image Grid.Column="2" Source="{Binding Image4Src3}" Visibility="{Binding Item1Vis}"/>
+                <Border Grid.Column="2" Style="{StaticResource BorderStyle}" BorderBrush="{Binding Border4Src3}">
+                    <Image Grid.Column="2" Source="{Binding Image4Src3}" cal:Message.Attach="[Event MouseLeftButtonDown] = [Action Image4SrcChanged($source)]"/>
                 </Border>
             </Grid>
 
+            
             <Label Grid.Row="4" Grid.Column="0" Content="Item 5 Name and Price" Visibility="{Binding Item5Vis}"/>
             <ComboBox Grid.Row="4" Grid.Column="1" Style="{StaticResource CmboBoxStyle}" x:Name="item5CmboBox" ItemsSource="{Binding ItemList}" Visibility="{Binding Item5Vis}" 
                       cal:Message.Attach="ItemListCmboBox_SelectionChanged($source)">
@@ -195,23 +201,24 @@
             </ComboBox>
             <TextBlock Grid.Row="4" Grid.Column="2" Text="{Binding Price5}" Visibility="{Binding Item5Vis}" FontSize="24" HorizontalAlignment="Center"/>
 
-            <Grid Grid.Row="4" Grid.Column="3">
+            <Grid Grid.Row="4" Grid.Column="3" Visibility="{Binding Item5Vis}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*" SharedSizeGroup="ItemGroup"/>
                     <ColumnDefinition Width="1*" SharedSizeGroup="ItemGroup"/>
                     <ColumnDefinition Width="1*" SharedSizeGroup="ItemGroup"/>
                 </Grid.ColumnDefinitions>
-                <Border Grid.Column="0" Style="{StaticResource BorderStyle}" >
-                    <Image Grid.Column="0" Source="{Binding Image5Src1}" Visibility="{Binding Item1Vis}"/>
+                <Border Grid.Column="0" Style="{StaticResource BorderStyle}" BorderBrush="{Binding Border5Src1}">
+                    <Image Grid.Column="0" Source="{Binding Image5Src1}" cal:Message.Attach="[Event MouseLeftButtonDown] = [Action Image5SrcChanged($source)]"/>
                 </Border>
-                <Border Grid.Column="1"  Style="{StaticResource BorderStyle}">
-                    <Image Grid.Column="1" Source="{Binding Image5Src2}" Visibility="{Binding Item1Vis}"/>
+                <Border Grid.Column="1"  Style="{StaticResource BorderStyle}" BorderBrush="{Binding Border5Src2}">
+                    <Image Grid.Column="1" Source="{Binding Image5Src2}" cal:Message.Attach="[Event MouseLeftButtonDown] = [Action Image5SrcChanged($source)]"/>
                 </Border>
-                <Border Grid.Column="2" Style="{StaticResource BorderStyle}">
-                    <Image Grid.Column="2" Source="{Binding Image5Src3}" Visibility="{Binding Item1Vis}"/>
+                <Border Grid.Column="2" Style="{StaticResource BorderStyle}" BorderBrush="{Binding Border5Src3}">
+                    <Image Grid.Column="2" Source="{Binding Image5Src3}" cal:Message.Attach="[Event MouseLeftButtonDown] = [Action Image5SrcChanged($source)]"/>
                 </Border>
             </Grid>
 
+            
             <Label Grid.Row="5" Grid.Column="0" Content="Item 6 Name and Price" Visibility="{Binding Item6Vis}"/>
             <ComboBox Grid.Row="5" Grid.Column="1" Style="{StaticResource CmboBoxStyle}" x:Name="item6CmboBox" ItemsSource="{Binding ItemList}" Visibility="{Binding Item6Vis}" 
                       cal:Message.Attach="ItemListCmboBox_SelectionChanged($source)">
@@ -223,20 +230,20 @@
             </ComboBox>
             <TextBlock Grid.Row="5" Grid.Column="2" Text="{Binding Price6}" Visibility="{Binding Item6Vis}" FontSize="24" HorizontalAlignment="Center"/>
 
-            <Grid Grid.Row="5" Grid.Column="3">
+            <Grid Grid.Row="5" Grid.Column="3" Visibility="{Binding Item6Vis}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*" SharedSizeGroup="ItemGroup"/>
                     <ColumnDefinition Width="1*" SharedSizeGroup="ItemGroup"/>
                     <ColumnDefinition Width="1*" SharedSizeGroup="ItemGroup"/>
                 </Grid.ColumnDefinitions>
-                <Border Grid.Column="0" Style="{StaticResource BorderStyle}" >
-                    <Image Grid.Column="0" Source="{Binding Image6Src1}" Visibility="{Binding Item1Vis}"/>
+                <Border Grid.Column="0" Style="{StaticResource BorderStyle}" BorderBrush="{Binding Border6Src1}">
+                    <Image Grid.Column="0" Source="{Binding Image6Src1}" cal:Message.Attach="[Event MouseLeftButtonDown] = [Action Image6SrcChanged($source)]"/>
                 </Border>
-                <Border Grid.Column="1"  Style="{StaticResource BorderStyle}">
-                    <Image Grid.Column="1" Source="{Binding Image6Src2}" Visibility="{Binding Item1Vis}"/>
+                <Border Grid.Column="1"  Style="{StaticResource BorderStyle}" BorderBrush="{Binding Border6Src2}">
+                    <Image Grid.Column="1" Source="{Binding Image6Src2}" cal:Message.Attach="[Event MouseLeftButtonDown] = [Action Image6SrcChanged($source)]"/>
                 </Border>
-                <Border Grid.Column="2" Style="{StaticResource BorderStyle}">
-                    <Image Grid.Column="2" Source="{Binding Image6Src3}" Visibility="{Binding Item1Vis}"/>
+                <Border Grid.Column="2" Style="{StaticResource BorderStyle}" BorderBrush="{Binding Border6Src3}">
+                    <Image Grid.Column="2" Source="{Binding Image6Src3}" cal:Message.Attach="[Event MouseLeftButtonDown] = [Action Image6SrcChanged($source)]"/>
                 </Border>
             </Grid>
 
