--- a/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/App.xaml
+++ b/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:FoodGiantFlyerGenerator"
-             StartupUri="MainWindow.xaml">
+             StartupUri="View/ProgramSelectorView.xaml">
     <Application.Resources>
          
     </Application.Resources>
