--- a/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/App.xaml
+++ b/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/App.xaml
@@ -1,9 +1,14 @@
 ﻿<Application x:Class="FoodGiantFlyerGenerator.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:FoodGiantFlyerGenerator"
-             StartupUri="View/ProgramSelectorView.xaml">
+             xmlns:local="clr-namespace:FoodGiantFlyerGenerator">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary>
+                    <local:AppBootstrapper x:Key="bootstrapper"/>
+                </ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
